# wings

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_CN.md  bunfig.toml  package-lock.json  package.json  pyproject.toml  reference.txt  tsconfig.json
.claude/plans/: serene-popping-parrot.md
.wings/agents/: code-reviewer.md
.wings/session-memory/: summary.md
.wings/tool-results/: call_00_Kf50m8gJitOMZgMnSh0J4537.txt  call_00_efVc0T9bodZ0IYAOgneB0656.txt  call_01_ET_UvmGY6z18Zv7JtliOzhC3489.txt  id2.txt
docs/: architecture.md  modules.md
docs/claude-code/: architecture.md  key-modules.md  overview.md
docs/design/: architecture.md  bundled-skills-plan.md  dev-plan.md  ink-cli-plan.md  modules.md  orchestrator-design.md  session-resume-plan.md  status.md  tool-comparison.md  ts-rewrite-plan.md
docs/opensquilla/: architecture.md  design-patterns.md  key-modules.md  overview.md
docs/reference/: REFERENCE-SYNTHESIS.md  astrbot-analysis.md  cherry-studio-analysis.md  crush-analysis.md  deepcode-analysis.md  deepseek-tui-analysis.md  deer-flow-analysis.md  hermes-agent-analysis.md  nanobot-analysis.md  openclaw-analysis.md
scripts/: bing_test.py  ddgs_test.py  init-references.sh
src/: index.ts
src/agent/: agent_loader.ts  handoff.ts  index.ts  loop.ts  subagent.ts
src/cli/: app-state.ts  app.tsx  bootstrap.ts  hooks.ts  ink-app.tsx  logging.ts  main.ts  permission.tsx  repl.tsx  store.ts
src/config/: index.ts  settings.ts
src/hooks/: index.ts  runner.ts  types.ts
src/mcp/: client.ts  index.ts  loader.ts  transport.ts
src/memory/: extractor.ts  guidance.md  index.ts  loader.ts  types.ts
src/messages/: index.ts  normalize.ts  types.ts
src/models/: anthropic.ts  capabilities.ts  index.ts  openai.ts  protocol.ts  registry.ts
src/permissions/: index.ts  pipeline.ts  rules.ts
src/query/: engine.ts  index.ts  token_budget.ts
src/routing/: index.ts  manager.ts  protocol.ts  selector.ts  tasks.ts  types.ts
src/services/: compact.ts  index.ts  session-memory.ts  (+1 more)
tests/: test_agent.py  test_compact.py  test_config.py  test_hooks.py  test_mcp.py  test_memory.py  test_messages.py  test_models.py  test_normalize.py  test_permissions.py  test_query.py  test_routing.py  test_skills.py  test_subagent.py  test_tools.py  test_web_fetch.py
(+134 files in other folders)
