[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wings"
version = "0.1.0"
description = "Multi-model AI agent system — each model is a wing"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
wings = "wings.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wings"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
