[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wings"
version = "0.1.0"
description = "Multi-model AI agent system — each model is a wing"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "html2text>=2025.4.15",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.8.0"]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
wings = "wings.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wings"]
include = ["src/wings/skills/builtin/**/SKILL.md"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
